# SMIP-MWP

./: AF_XDP_PHASE2_OPTIMIZATION_GUIDE.md  AF_XDP_VALIDATION_AND_BENCHMARKING.md  AF_XDP_VALIDATION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  CRYPTO_PERF_IMPROVEMENTS.md  Dockerfile  Dockerfile.afxdp  Dockerfile.stress  Dockerfile.test  EXECUTION_PLAN_10GBPS_LEAN.md  FINAL_EXECUTION_SUMMARY_10GBPS.md  HARDWARE_DEPLOYMENT_GUIDE.md  Header test · GO  Header · GO  Hybrid · GO  IMPLEMENTATION_PLAN.md  LICENSE  OPTIMIZATION_ROADMAP.md  PERFORMANCE_TESTING_GUIDE.md  PERF_README.md  PERF_SUMMARY.txt  PHASE1_COMPLETION.md  PHASE1_COMPLETION_REPORT.md  PHASE2_EXECUTION_SUMMARY.md  PHASE2_EXECUTIVE_SUMMARY.md  PHASE2_STATUS.md  PHASE_COMPLETION_REPORT.md  PRODUCTION_READINESS.md  QUICK_START_10GBPS.md  README.md  ROADMAP_EXECUTIVE_SUMMARY.md  SECURITY.md  SESSION_COMPLETION_SUMMARY.md  TIMELINE_AND_TRACKER.md  VALIDATION_COMPLETE.md  VALIDATION_REPORT.md  WEEK1_QUICK_START.md  WINDOWS_PERFORMANCE_TESTING.md  bench_multi.memprof  (+9 more)
.github/: FUNDING.yml
benchmarks/: HARDWARE_VALIDATION_CHECKLIST.md  HARDWARE_VALIDATION_RUNBOOK.md  MOONGEN_TRex_BENCHPLAN.md  PHASE2_BASELINE.md  PR-6-summary.md  README.md  README_RUN_GENERATORS.md  afxdp-bench-multi-60s.txt  afxdp-bench-single-60s.txt  afxdp-cpu.prof  afxdp-mem.prof  afxdp-mw-w4-b4-300s.txt  bench-codespaces-1dc9bf-20260515T014007Z.txt  bench-codespaces-1dc9bf-20260515T014016Z-cpu.prof  bench-codespaces-1dc9bf-20260515T014016Z-mem.prof  (+114 more)
rust_rewrite/afxdp/: Cargo.toml
rust_rewrite/afxdp/src/: lib.rs  rings.rs  socket.rs
(+177 files in other folders)
